[tool.poetry]
name = "electronics-trading-network"
version = "0.1.0"
description = ""
authors = ["Armen-ar <armen.aruts1967@gmail.com>"]
readme = "README.md"
packages = [{include = "electronics_trading_network"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
